--- a/assets/css/bianca.css
+++ b/assets/css/bianca.css
@@ -1,5 +1,3 @@
-
-
 body {
   font-family: 'Poppins', sans-serif;
   overflow-x: hidden;
@@ -320,7 +318,7 @@ header .navbar {
 	top: 20px;
 }
 .navbar .navbar-toggler-icon:after {
-	content: '\f0c9';
+	content: '\203A';
 	color: #D8AC9C;
 	font-size: 18px;
 	line-height: 26px;
@@ -408,7 +406,7 @@ header .navbar {
 }
 
 .Modern-Slider .NextArrow:before{
-  content:'\f105';
+  content:'\203A';
 }
 
 .Modern-Slider .PrevArrow {
@@ -427,7 +425,7 @@ header .navbar {
 }
 
 .Modern-Slider .PrevArrow:before{
-  content:'\f104';
+  content:'\2039';
 }
 
 ul.slick-dots {
