--- a/assets/css/bianca.css
+++ b/assets/css/bianca.css
@@ -25,7 +25,7 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 a.filled-button {
-	background-color: #D8AC9C;
+	background-color: #22577E;
 	color: #fff;
 	font-size: 13px;
 	text-transform: uppercase;
@@ -38,7 +38,7 @@ a.filled-button {
 
 a.filled-button:hover {
 	background-color: #fff;
-	color: #D8AC9C;
+	color: #22577E;
 }
 
 a.border-button {
@@ -56,7 +56,7 @@ a.border-button {
 
 a.border-button:hover {
 	background-color: #fff;
-	color: #D8AC9C;
+	color: #22577E;
 }
 
 .section-heading {
@@ -86,7 +86,7 @@ a.border-button:hover {
 
 #preloader {
   overflow: hidden;
-  background: #D8AC9C;
+  background: #22577E;
   left: 0;
   right: 0;
   top: 0;
@@ -166,7 +166,7 @@ a.border-button:hover {
 /* Sub Header Style */
 
 .sub-header {
-	background-color: #D8AC9C;
+	background-color: #22577E;
 	height: 46px;
 	line-height: 46px;
 }
@@ -247,7 +247,7 @@ header .navbar {
 	box-shadow: 0px 1px 10px rgba(0,0,0,0.1);
 }
 .background-header .navbar-brand h2 {
-	color: #D8AC9C!important;
+	color: #22577E!important;
 }
 .background-header .navbar-nav a.nav-link {
 	color: #1e1e1e!important;
@@ -257,7 +257,7 @@ header .navbar {
 .background-header .navbar-nav .nav-link.current,
 .background-header .navbar-nav .nav-link.show,
 .background-header .navbar-nav .show>.nav-link {
-	color: #D8AC9C!important;
+	color: #22577E!important;
 }
 .navbar .navbar-brand {
 	float: 	left;
@@ -301,8 +301,8 @@ header .navbar {
 .navbar .navbar-nav .nav-link.current,
 .navbar .navbar-nav .nav-link.show,
 .navbar .navbar-nav .show>.nav-link {
-	color: #D8AC9C;
-	border-bottom: 3px solid #D8AC9C;
+	color: #22577E;
+	border-bottom: 3px solid #22577E;
 }
 .navbar .navbar-toggler-icon {
 	background-image: none;
@@ -319,13 +319,11 @@ header .navbar {
 }
 .navbar .navbar-toggler-icon:after {
 	content: '\203A';
-	color: #D8AC9C;
+	color: #22577E;
 	font-size: 18px;
 	line-height: 26px;
 	font-family: 'FontAwesome';
 }
-
-
 
 /* Banner Style */
 
@@ -447,7 +445,7 @@ ul.slick-dots {
   text-transform: uppercase;
   font-weight: 700;
   letter-spacing: 1px;
-  color:#D8AC9C;
+  color:#22577E;
   animation:fadeOutRight 1s both;
 }
 
@@ -514,7 +512,7 @@ ul.slick-dots {
 /* Request Form */
 
 .request-form {
-	background-color: #D8AC9C;
+	background-color: #22577E;
 	padding: 40px 0px;
 	color: #fff;
 }
@@ -598,7 +596,7 @@ ul.slick-dots {
 
 .fun-facts em {
 	font-style: normal;
-	color: #D8AC9C;
+	color: #22577E;
 }
 
 .fun-facts p {
@@ -619,7 +617,7 @@ ul.slick-dots {
 
 .count-digit {
     margin: 5px 0px;
-    color: #D8AC9C;
+    color: #22577E;
     font-weight: 700;
     font-size: 36px;
 }
@@ -677,7 +675,7 @@ ul.slick-dots {
 
 .more-info .right-content em {
 	font-style: normal;
-	color: #D8AC9C;
+	color: #22577E;
 }
 
 .more-info .right-content p {
@@ -718,7 +716,7 @@ ul.slick-dots {
 	margin-top: 8px;
 	font-weight: 600;
 	font-size: 14px;
-	color: #D8AC9C;
+	color: #22577E;
 }
 .testimonial-item img {
 	max-width: 60px;
@@ -751,7 +749,7 @@ ul.slick-dots {
 }
 
 .callback-form .contact-form {
-	background-color: #D8AC9C;
+	background-color: #22577E;
 	padding: 60px;
 	border-radius: 5px;
 	text-align: center;
@@ -827,11 +825,11 @@ ul.slick-dots {
 
 .callback-form .contact-form button.border-button:hover {
 	background-color: #fff;
-	color: #D8AC9C;
+	color: #22577E;
 }
 
 .contact-us .contact-form button.filled-button {
-	background-color: #D8AC9C;
+	background-color: #22577E;
 	color: #fff;
 	border: none;
 	font-size: 13px;
@@ -849,7 +847,7 @@ ul.slick-dots {
 
 .contact-us .contact-form button.filled-button:hover {
 	background-color: #fff;
-	color: #D8AC9C;
+	color: #22577E;
 }
 
 
@@ -923,7 +921,7 @@ footer ul.social-icons li a {
 }
 
 footer ul.social-icons li a:hover {
-	background-color: #D8AC9C;
+	background-color: #22577E;
 }
 
 footer ul.menu-list li {
@@ -941,7 +939,7 @@ footer ul.menu-list li a {
 }
 
 footer ul.menu-list li a:hover {
-	color: #D8AC9C;
+	color: #22577E;
 }
 
 footer .contact-form input {
@@ -1002,7 +1000,7 @@ footer .contact-form ::placeholder {
 footer .contact-form button.filled-button {
 	background-color: transparent;
 	color: #fff;
-	background-color: #D8AC9C;
+	background-color: #22577E;
 	border: none;
 	font-size: 13px;
 	text-transform: uppercase;
@@ -1019,7 +1017,7 @@ footer .contact-form button.filled-button {
 
 footer .contact-form button.filled-button:hover {
 	background-color: #fff;
-	color: #D8AC9C;
+	color: #22577E;
 }
 
 
@@ -1098,7 +1096,7 @@ footer .contact-form button.filled-button:hover {
 }
 
 .team-item .down-content span {
-	color: #D8AC9C;
+	color: #22577E;
 	font-weight: 600;
 	font-size: 14px;
 	display: block;
@@ -1134,7 +1132,7 @@ footer .contact-form button.filled-button:hover {
 	width: 100%;
 	padding: 30px 30px;
 	display: inline-block;
-	background-color: #D8AC9C;
+	background-color: #22577E;
   	font-size: 20px;
   	color: #121212;
   	letter-spacing: 0.5px;
@@ -1146,8 +1144,8 @@ footer .contact-form button.filled-button:hover {
 	margin-top: 5px;
 }
 #tabs ul .ui-tabs-active span {
-  background: #D8AC9C;
-  border: #D8AC9C;
+  background: #22577E;
+  border: #22577E;
   line-height: 90px;
   border-bottom: none;
 }
@@ -1195,7 +1193,7 @@ footer .contact-form button.filled-button:hover {
 }
 
 .contact-information .contact-item i {
-	color: #D8AC9C;
+	color: #22577E;
 	font-size: 48px;
 	margin-bottom: 40px;
 }
@@ -1213,7 +1211,7 @@ footer .contact-form button.filled-button:hover {
 
 .contact-information .contact-item a {
 	font-weight: 600;
-	color: #D8AC9C;
+	color: #22577E;
 	font-size: 15px;
 }
 
@@ -1327,7 +1325,7 @@ footer .contact-form button.filled-button:hover {
 	.navbar .navbar-nav .nav-link.current,
 	.navbar .navbar-nav .nav-link.show,
 	.navbar .navbar-nav .show>.nav-link {
-		color: #D8AC9C!important;
+		color: #22577E!important;
 		border-bottom: none!important;
 	}
 }
